--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "body-parser": "^1.20.2",
     "browserify-fs": "^1.0.0",
     "browserify-zlib": "^0.2.0",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "net": "^1.0.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "openai": "^4.16.1",
     "os-browserify": "^0.3.0",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.9.1",
