--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "tty-browserify": "^0.0.1"
